--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./node_modules/babel-cli/bin/babel-node.js index.js",
-    "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive ./tests/*.spec.js"
+    "start": "node ./node_modules/babel-cli/bin/babel-node.js app.js",
+    "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive -u tdd ./tests/*.spec.js"
   },
   "repository": {
     "type": "git",
