--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./node_modules/babel-cli/bin/babel-node.js app.js",
+    "start": "nodemon ./node_modules/babel-cli/bin/babel-node.js app.js",
     "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive -u tdd ./tests/*.spec.js"
   },
   "repository": {
