--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "babel-cli": "^6.26.0",
     "babel-preset-node6": "^11.0.0",
     "babel-register": "^6.26.0",
-    "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
+    "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "supertest": "^3.1.0"
