--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-node6": "^11.0.0",
     "babel-register": "^6.26.0",
+    "bcrypt-nodejs": "0.0.3",
     "chai": "^4.1.2",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
